feat(note): добавление вложений и тегов к заметкам, рефакторинг создания заметок
- Рефакторинг `CreateNoteHandler` для обработки multipart/form-data при создании заметок с вложениями и тегами
- Обновление `CreateNoteInput` для использования form-тегов при привязке данных из multipart-формы
- Реализация функциональности загрузки файлов для вложений, включая валидацию типов и уникальное именование
- Добавление поддержки привязки тегов к заметкам при создании
- Обновление получения заметок для предварительной загрузки тегов и вложений
- Реализация удаления вложений при удалении заметки
- Обновление документации Swagger для отражения изменений в эндпоинтах создания и удаления заметок
- Удаление модели `Topic` и связанных миграций
- Обновление сервиса аватаров для использования подпапки для аватаров
