# docs/swagger.json
@@ -232,9 +232,9 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Создаёт новую заметку пользователя с генерацией эмбеддинга",
+                "description": "Создаёт новую заметку пользователя с генерацией эмбеддинга, тегами и вложениями",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -245,13 +245,48 @@
                 "summary": "Создать заметку",
                 "parameters": [
                     {
-                        "description": "Данные заметки",
-                        "name": "note",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handlers.CreateNoteInput"
-                        }
+                        "type": "string",
+                        "description": "Заголовок",
+                        "name": "title",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Содержимое",
+                        "name": "content",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "ID связанных заметок",
+                        "name": "related_ids",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "ID тегов",
+                        "name": "tag_ids",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "file"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "Вложения (image, audio, pdf)",
+                        "name": "attachments",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -268,7 +303,7 @@
                         }
                     },
                     "500": {
-                        "description": "Ошибка генерации эмбеддинга EMBEDDING_ERROR   Ошибка сериализации эмбеддинга EMBEDDING_SERIALIZE_ERROR",
+                        "description": "Ошибка сервера",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
@@ -358,7 +393,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Удаляет заметку пользователя по id",
+                "description": "Удаляет заметку пользователя по id и все связанные вложения",
                 "consumes": [
                     "application/json"
                 ],
@@ -680,27 +715,6 @@
         }
     },
     "definitions": {
-        "handlers.CreateNoteInput": {
-            "type": "object",
-            "required": [
-                "content",
-                "title"
-            ],
-            "properties": {
-                "content": {
-                    "type": "string"
-                },
-                "related_ids": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
         "handlers.LoginInput": {
             "type": "object",
             "required": [
